--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ _hdl_checker
 pipelined_processor/pipelined_processor.cache/wt/project.wpc
 pipelined_processor/pipelined_processor.xpr
 pipelined_processor/pipelined_processor.runs
+pipelined_processor/pipelined_processor.cache
