--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ pipelined_processor/pipelined_processor.cache/wt/project.wpc
 pipelined_processor/pipelined_processor.xpr
 pipelined_processor/pipelined_processor.runs
 pipelined_processor/pipelined_processor.cache
+pipelined_processor/pipelined_processor.srcs/utils_*
